--- a/LoveDive/LoveDive/Base.lproj/Main.storyboard
+++ b/LoveDive/LoveDive/Base.lproj/Main.storyboard
@@ -1,24 +1,192 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="k7t-td-14m">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoveDive" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="l8P-Vz-KLe"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1579" y="-1455"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dPe-de-1y8">
+            <objects>
+                <viewController id="kQ8-l6-jR5" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vgh-6K-DQz">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Wws-de-B4q"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="TPD-Db-5es"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tbq-c0-kaf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1579" y="-779"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WIK-1o-nBZ">
+            <objects>
+                <viewController id="lGV-si-KEE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oGo-i1-f5u">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Qrr-EF-4oL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9KO-A4-amd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1XZ-P1-E3i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1579" y="-2157"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="0DK-co-JmO">
+            <objects>
+                <tabBarController id="k7t-td-14m" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pdE-3q-r0n">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="AccentColor"/>
+                        <color key="selectedImageTintColor" red="0.094117647058823528" green="0.64313725490196072" blue="0.88235294117647056" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="mWs-sG-Mrg" kind="relationship" relationship="viewControllers" id="tbS-T8-2aY"/>
+                        <segue destination="6Fg-hs-5v7" kind="relationship" relationship="viewControllers" id="NCS-EE-ycd"/>
+                        <segue destination="Uod-h3-mW6" kind="relationship" relationship="viewControllers" id="eUn-zf-Git"/>
+                        <segue destination="GLm-fQ-Jnz" kind="relationship" relationship="viewControllers" id="cTb-NW-v6e"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8z2-MW-n9e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1410" y="-90"/>
+        </scene>
+        <!--Explore-->
+        <scene sceneID="FKM-IQ-GuR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mWs-sG-Mrg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Explore" image="sun.haze" catalog="system" selectedImage="sun.haze.fill" id="wcO-rK-Qxe"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="A1l-IP-2FF">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="lGV-si-KEE" kind="relationship" relationship="rootViewController" id="Q89-d4-HoR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jm3-zu-h5X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="576" y="-2157"/>
+        </scene>
+        <!--Breath-->
+        <scene sceneID="OS6-xA-exX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Fg-hs-5v7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Breath" image="circle.and.line.horizontal" catalog="system" selectedImage="circle.and.line.horizontal.fill" id="Sg3-os-GHY"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QfA-uO-8Dj">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4S2-KR-IXN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4pP-qI-zYm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="576" y="-1455"/>
+        </scene>
+        <!--Activities-->
+        <scene sceneID="n9y-vu-jEA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Uod-h3-mW6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Activities" image="chart.bar" catalog="system" selectedImage="chart.bar.fill" id="jeE-zb-MHn"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3RJ-wU-MFa">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kQ8-l6-jR5" kind="relationship" relationship="rootViewController" id="mJe-jg-01b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3XJ-m0-Leg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="573" y="-780"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="3cF-Uc-fw9">
+            <objects>
+                <viewController id="0j9-IT-KTQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fle-YX-0Bq">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="rqK-5x-ncn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xPx-YP-Gtt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aBf-jO-BHX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1579" y="-90"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="MsE-YB-2oc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GLm-fQ-Jnz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" selectedImage="person.fill" id="5dR-51-sM2"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hZu-Tf-ZZF">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0j9-IT-KTQ" kind="relationship" relationship="rootViewController" id="1yn-Rq-w9B"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vYF-bf-3Ha" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="575" y="-91"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chart.bar" catalog="system" width="128" height="89"/>
+        <image name="chart.bar.fill" catalog="system" width="128" height="90"/>
+        <image name="circle.and.line.horizontal" catalog="system" width="128" height="88"/>
+        <image name="circle.and.line.horizontal.fill" catalog="system" width="128" height="88"/>
+        <image name="person" catalog="system" width="128" height="121"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="sun.haze" catalog="system" width="128" height="118"/>
+        <image name="sun.haze.fill" catalog="system" width="128" height="118"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
