--- a/LoveDive/LoveDive/View/Base.lproj/LaunchScreen.storyboard
+++ b/LoveDive/LoveDive/View/Base.lproj/LaunchScreen.storyboard
@@ -15,13 +15,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LoveDiveLogo" translatesAutoresizingMaskIntoConstraints="NO" id="yWG-g4-Y7W">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoveDiveLogo" translatesAutoresizingMaskIntoConstraints="NO" id="yWG-g4-Y7W">
                                 <rect key="frame" x="76" y="362" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="3fZ-sW-zug"/>
+                                    <constraint firstAttribute="width" constant="240" id="PZ4-KO-pZx"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.019607843137254902" green="0.20000000000000001" blue="0.32549019607843138" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="yWG-g4-Y7W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="44J-GU-wpp"/>
+                            <constraint firstItem="yWG-g4-Y7W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Tpu-s6-C5j"/>
+                            <constraint firstItem="yWG-g4-Y7W" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Z4H-SR-QgS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yWG-g4-Y7W" secondAttribute="trailing" constant="76" id="m7f-WA-X2h"/>
+                            <constraint firstItem="yWG-g4-Y7W" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="tk0-B4-hgf"/>
+                            <constraint firstItem="yWG-g4-Y7W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="76" id="xQ0-KN-TsW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
