--- a/LoveDive/LoveDive/View/Base.lproj/Main.storyboard
+++ b/LoveDive/LoveDive/View/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <color key="tintColor" red="0.094117647060000004" green="0.64313725489999995" blue="0.88235294119999996" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="9KO-A4-amd"/>
+                    <navigationItem key="navigationItem" style="editor" id="9KO-A4-amd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1XZ-P1-E3i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
